feat: add backup job apis
